# nonebot-adapter-console

./: README.md  pyproject.toml  requirements.txt
src/nonebot/adapters/console/: adapter.py  bot.py  event.py  message.py  model.py  utils.py
test/: .env  console_bot.py  test_web.py
